# AlgorithmModule-linux

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  eight_numbers_c.psess
binding-examples/csharp/BfsTest/: Algorithm.sln
binding-examples/csharp/BfsTest/Algorithm/: Algorithm.csproj
binding-examples/csharp/BfsTest/Algorithm/Graph/: Bfs.cs
binding-examples/csharp/BfsTest/Algorithm/Properties/: AssemblyInfo.cs
binding-examples/csharp/BfsTest/BfsTest/: App.xaml.cs  BfsTest.csproj  MainWindow.xaml.cs
binding-examples/csharp/BfsTest/BfsTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  app.manifest
csharp/BfsTest/: BfsTest.sln
csharp/BfsTest/Algorithm/: Algorithm.csproj
csharp/BfsTest/Algorithm/Graph/: Bfs.cs
csharp/BfsTest/BfsTest/: App.xaml  BfsTest.csproj  MainWindow.xaml  MainWindow.xaml.cs
csharp/BfsTest/Debug/: DllTest.exp  DllTest.ilk
csharp/BfsTest/DllTest/: DllTest.cpp  DllTest.vcxproj  DllTest.vcxproj.filters
csharp/BfsTest/DllTest/Debug/: vc141.idb
csharp/BfsTest/DllTest/Debug/DllTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DllTest.lastbuildstate  DllTest.write.1u.tlog  (+3 more)
csharp/BfsTest/x64/Debug/: DllTest.exp  DllTest.ilk
include/: algorithm_module.h  algorithm_module.hpp  begin.h  c_algorithm_module.h  graph.h  graph.hpp  monoid.h  monoid.hpp
src/: CMakeLists.txt  CMakeLists.txt~  algorithm_module.cpp  tester.cpp
src/algorithm_module/: CMakeLists.txt  CMakeLists.txt~  Graph.cpp  algorithm_module.cpp  c_adapt.cpp  monoid.cpp
src/test/: CMakeLists.txt  CMakeLists.txt~  eight_numbers_main.c  monoid_main.cpp  poj_2251_main.c  poj_2251_main.cpp  tester.cpp~
(+9 files in other folders)
