SET(LIBRARY_OUTPUT_PATH ${ALGORITHM_MODULE_SOURCE_DIR}/lib)
SET(SRC_LIST algorithm_module.cpp c_adapt.cpp)

IF(DEBUG)
SET(LIBRARY_TYPE STATIC)
ELSE(DEBUG)
SET(LIBRARY_TYPE SHARED)
ENDIF(DEBUG)

INCLUDE_DIRECTORIES(${ALGORITHM_MODULE_SOURCE_DIR}/include)
ADD_LIBRARY(algorithm_module ${LIBRARY_TYPE} ${SRC_LIST})
